[package]
name = "marked-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false


[dependencies]
rand = "0.8.5"
regex = "1.5.4"
kuchiki = "0.8.1"
seq-macro = "0.3"
scraper = "0.12.0"
gnuplot = "0.0.37"
test-case = "1.2.1"
derivative = "2.2.0"
html5ever = "0.25.1"
fancy-regex = "0.8.0"
serde_json = "1.0.78"
lazy_static = "1.4.0"
html_parser = "0.6.2"
urlencoding = "2.1.0"
wasm-bindgen = "0.2.79"
pretty_assertions = "1.1.0"
serde = { version = "1.0.136", features = ["derive"] }

