[package]
name = "marked-rs"
version = "0.1.0"
authors = ["Jamie Samuel"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
lto = true
opt-level = 3

[dependencies]
url = "2.2.2"
rand = "0.8.5"
regex = "1.5.4"
ntest = "0.7.5"
tabled = "0.5.0"
chrono = "0.4.19"
regress = "0.4.1"
kuchiki = "0.8.1"
seq-macro = "0.3"
comrak = "0.12.1"
scraper = "0.12.0"
gnuplot = "0.0.37"
profiling = "1.0.5"
test-case = "1.2.1"
urlencoded = "0.6.0"
derivative = "2.2.0"
html5ever = "0.25.1"
fancy-regex = "0.8.0"
serde_json = "1.0.78"
lazy_static = "1.4.0"
html_parser = "0.6.2"
urlencoding = "2.1.0"
html-escape = "0.2.11"
wasm-bindgen = "0.2.79"
pretty_assertions = "1.1.0"
unicode-segmentation = "1.9.0"

getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0.136", features = ["derive"] }
pulldown-cmark = { version = "0.9.1", default-features = false }


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }